--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,48 +1,38 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.1.0
+    rev: v4.4.0
     hooks:
-    - id: check-case-conflict
-    - id: check-json
-    - id: check-toml
     - id: check-yaml
     - id: debug-statements
     - id: end-of-file-fixer
     - id: trailing-whitespace
 
+#  - repo: https://github.com/pycqa/isort
+#    rev: 5.11.5
+#    hooks:
+#    - id: isort
+#      args: ["--profile", "black", "--filter-files"]
+
+  - repo: https://github.com/psf/black
+    rev: 23.7.0
+    hooks:
+    - id: black
+
   - repo: https://github.com/PyCQA/flake8
-    rev: 3.9.2
+    rev: 6.0.0
     hooks:
     - id: flake8
       args:
       - --max-line-length=131
-      - --ignore=E123, E124, F841, W504, E126, E251, W503
-
-  - repo: https://github.com/pre-commit/mirrors-yapf
-    rev: v0.31.0
-    hooks:
-    - id: yapf
-      args: [-r,-i]
-      additional_dependencies: [toml]
-
-  - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
-    hooks:
-    - id: isort
+      - --ignore=E124,E126,E266,W503,E203
 
   - repo: https://github.com/asottile/yesqa
-    rev: v1.2.3
+    rev: v1.5.0
     hooks:
     - id: yesqa
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.25.0
+    rev: v3.9.0
     hooks:
     - id: pyupgrade
-      args: [--py37-plus]
-
-  - repo: https://github.com/PyCQA/pydocstyle
-    rev: 6.1.1
-    hooks:
-    - id: pydocstyle
-      args: [--select=D101]
+      args: [--py36-plus]
