--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
     - id: flake8
       args:
       - --max-line-length=131
-      - --ignore=E124,E126,E266,W503,E203
+      - --ignore=E124,E126,E266,W503,E203,E722
 
   - repo: https://github.com/asottile/yesqa
     rev: v1.5.0
